Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div v-if="vendorInvoices?.length > 0">
                     <table class="table table-striped">
                         <thead>
-                            <div class="text-center fw-bold"><h3>{{suppl}}</h3></div>
+                            <div class="text-center fw-bold"><h3>{{displayedSuppl}}</h3></div>
                             <tr class="bg-info">
                                 <th>Invoice Number</th>
                                 <th>Invoice Reference</th>
