--- a/index.html
+++ b/index.html
@@ -196,130 +196,131 @@
 											invoice.number, 
 											invoice.supplier)"/>
 									</td>
-			                                        <td class="px-4">{{invoice.number}}</td>
-			                                        <td class="px-4">{{invoice.id}}</td>
-			                                        <td class="px-4">{{invoice.date}}</td>
-			                                        <td class="px-4 text-right">{{invoice['amount']}}</td>
-			                                        <td class="px-4 text-right">{{displayPaid(invoice)}}</td>
-			                                        <td class="px-4 text-right"><input type="date" v-model="date"/></td>
-                                    			</tr>
-                                    			<tr>
-                                        			<td></td>
-								<td></td>
-								<td></td>
-								<td class="px-4 text-right">Total</td>
-                                        			<td class="px-4 text-right"></td>
-								<td class="px-4 text-right">
-									{{ currentSupplierSum(suppl)? 
-										currentSupplierSum(suppl).toFixed(2) : 
-										selectedSupplierSum }}
-								</td>
-                                    			</tr>
-                                		</table>
-                            		</div>
-                            		<div v-else>There are no outstanding invoices for {{suppl}}</div>
-                        	</div>
-                    	</div>
+				                                        <td class="px-4">{{invoice.number}}</td>
+				                                        <td class="px-4">{{invoice.id}}</td>
+				                                        <td class="px-4">{{invoice.date}}</td>
+				                                        <td class="px-4 text-right">{{invoice['amount']}}</td>
+				                                        <td class="px-4 text-right">{{displayPaid(invoice)}}</td>
+			                                        	<td class="px-4 text-right">
+										<input type="date" v-model="date"/>
+									</td>
+	                                    			</tr>
+	                                    			<tr>
+	                                        			<td></td>
+									<td></td>
+									<td></td>
+									<td class="px-4 text-right">Total</td>
+	                                        			<td class="px-4 text-right"></td>
+									<td class="px-4 text-right">
+										{{ currentSupplierSum(suppl)? 
+											currentSupplierSum(suppl).toFixed(2) : 
+											selectedSupplierSum }}
+									</td>
+	                                    			</tr>
+	                                		</table>
+	                            		</div>
+	                            		<div v-else>There are no outstanding invoices for {{suppl}}</div>
+	                        	</div>
+	                    	</div>
                 	</section>
-            </div>
-            <div v-if="paymentsSummaryPage">
-                <h4 class="center">Payment Processing</h4>
-                <br>
-                <div class="col-lg-6">
-                    <button class="btn btn-info w-40" @click="updateView(2)">
-                        Back
-                    </button>
-                    <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPaymentsScreen=true">
+            	</div>
+            	<div v-if="paymentsSummaryPage">
+                	<h4 class="center">Payment Processing</h4>
+                	<br>
+                	<div class="col-lg-6">
+                    		<button class="btn btn-info w-40" @click="updateView(2)">
+                        		Back
+                    		</button>
+                    		<button class="btn btn-dark" v-if="selectedPayments.length > 0" 
+					@click="confirmProcessPaymentsScreen=true">
 						Complete Process payments
-					</button>
-				</div>									    		
-                <div v-if="selectedPayments.length > 0">
-                    <div v-for="record in Object.entries(paymentsRecord)" class="row"> 
-                        <div class="col">
-                              {{ record[0] }} GBP {{ record[1].toFixed(2)}}
-                        </div>
-                    </div>
-                   
-                    <div class="fw-bold">
-                        Total paid: GBP {{ grandTotalPaid().toFixed(2) }} on {{ date }}
-                    </div>
-                </div>
-                <div v-else>
-                    No payments selected
-                </div>
-            </div>
-            <div v-if="confirmProcessPaymentsScreen">
-                Please confirm you wish to allocate the payments.
-                <div v-for="inv in selectedPayments">
-                  GBP {{inv.amount}} {{inv.invNo}} {{inv.supplier}} {{ formattedDate(date) }}
-                </div>
-                <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPayments()">
+				</button>
+			</div>									    		
+                	<div v-if="selectedPayments.length > 0">
+                    		<div v-for="record in Object.entries(paymentsRecord)" class="row"> 
+                        		<div class="col">
+                              			{{ record[0] }} GBP {{ record[1].toFixed(2)}}
+                        		</div>
+                    		</div>
+                   		<div class="fw-bold">
+                        		Total paid: GBP {{ grandTotalPaid().toFixed(2) }} on {{ date }}
+                    		</div>
+                	</div>
+                	<div v-else>
+                    		No payments selected
+                	</div>
+            	</div>
+            	<div v-if="confirmProcessPaymentsScreen">
+                	Please confirm you wish to allocate the payments.
+                	<div v-for="inv in selectedPayments">
+                  		GBP {{inv.amount}} {{inv.invNo}} {{inv.supplier}} {{ formattedDate(date) }}
+                	</div>
+                	<button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPayments()">
 				Confirm
 			</button>
-            </div>
-    
-            <div v-if="viewInvoiceDetails">
+            	</div>
+    		<div v-if="viewInvoiceDetails">
                 <p class="text-center py-5">
-                    <table class="mb-5">
-                            <tr>
-                                <td>INVOICE #:</td>
-				<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.number"></td>
-				<td v-else>{{ selectedInvoice.number }}</td>
-                            </tr>
-                            <tr>
-                                <td>INVOICE DATE:</td>
-				<td v-if="editInvoiceMode"><input type="date" :value="selectedInvoice.date"></td>
-				<td v-else>{{ selectedInvoice.date }}</td>
-			    </tr>
-                            <tr>
-                                <td>INVOICE REF:</td>
-				<td>{{ selectedInvoice.id }}</td>
-                            </tr>
-                            <tr>
-                                <td>INVOICE DESC:</td>
-				<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.description"></td>
-				<td v-else>{{ selectedInvoice.description }}</td>
-                            </tr>
-                            <tr>
-                                <td>INVOICE OFFICE:</td>
-				<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.office"></td>
-				<td v-else>{{ selectedInvoice.office }}</td>
-                            </tr>
-                            <tr>
-                                <td>INVOICE SUPPLIER:</td>
-				<td>{{ selectedInvoice.supplier }}</td>
-                            </tr>
-                            <tr>
-                                <td>INVOICE OVERHEAD:</td>
-				<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.overhead"></td>
-				<td v-else>{{ selectedInvoice.overhead }}</td>
-                            </tr>
-                            <tr>
-                                <td>INVOICE AMOUNT:</td>
-				<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.amount"></td>
-				<td v-else>{{ selectedInvoice.amount }}</td>
-                            </tr>
-                            <tr class="text-secondary fw-bold">
-                                <td>INVOICE PAYMENT REF:</td>
-				<td>{{ selectedInvoice.paidid }}</td>
-                            </tr>
-                            <tr class="text-secondary fw-bold">
-                                <td>INVOICE PAYMENT AMOUNT:</td>
-				<td>{{ selectedInvoice.paidAmount }}</td>
-                            </tr>
-                            <tr class="text-secondary fw-bold">
-                                <td>INVOICE PAYMENT DATE:</td>
-				<td>{{ formattedDate(selectedInvoice.paidDate) }}</td>
-                            </tr>
-			    <tr v-if="editInvoiceMode">
-				<td>
-					<button class="btn btn-dark" @click="editInvoice()">
-						Update
-					</button>
-				</td>
-				<td class="text-danger">{{ invoiceUpdateMessage }}</td>
-			    </tr>
-                        </table>
+                	<table class="mb-5">
+                            	<tr>
+                                	<td>INVOICE #:</td>
+					<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.number"></td>
+					<td v-else>{{ selectedInvoice.number }}</td>
+                            	</tr>
+                            	<tr>
+	                                <td>INVOICE DATE:</td>
+					<td v-if="editInvoiceMode"><input type="date" :value="selectedInvoice.date"></td>
+					<td v-else>{{ selectedInvoice.date }}</td>
+			    	</tr>
+                            	<tr>
+	                                <td>INVOICE REF:</td>
+					<td>{{ selectedInvoice.id }}</td>
+                            	</tr>
+                            	<tr>
+	                                <td>INVOICE DESC:</td>
+					<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.description"></td>
+					<td v-else>{{ selectedInvoice.description }}</td>
+                            	</tr>
+                            	<tr>
+	                                <td>INVOICE OFFICE:</td>
+					<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.office"></td>
+					<td v-else>{{ selectedInvoice.office }}</td>
+                            	</tr>
+                            	<tr>
+	                                <td>INVOICE SUPPLIER:</td>
+					<td>{{ selectedInvoice.supplier }}</td>
+                            	</tr>
+                            	<tr>
+	                                <td>INVOICE OVERHEAD:</td>
+					<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.overhead"></td>
+					<td v-else>{{ selectedInvoice.overhead }}</td>
+                            	</tr>
+                            	<tr>
+	                                <td>INVOICE AMOUNT:</td>
+					<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.amount"></td>
+					<td v-else>{{ selectedInvoice.amount }}</td>
+                            	</tr>
+                            	<tr class="text-secondary fw-bold">
+	                                <td>INVOICE PAYMENT REF:</td>
+					<td>{{ selectedInvoice.paidid }}</td>
+                            	</tr>
+                            	<tr class="text-secondary fw-bold">
+	                                <td>INVOICE PAYMENT AMOUNT:</td>
+					<td>{{ selectedInvoice.paidAmount }}</td>
+                            	</tr>
+                            	<tr class="text-secondary fw-bold">
+	                                <td>INVOICE PAYMENT DATE:</td>
+					<td>{{ formattedDate(selectedInvoice.paidDate) }}</td>
+                            	</tr>
+			    	<tr v-if="editInvoiceMode">
+					<td>
+						<button class="btn btn-dark" @click="editInvoice()">
+							Update
+						</button>
+					</td>
+					<td class="text-danger">{{ invoiceUpdateMessage }}</td>
+			    	</tr>
+                	</table>
 		    	<button class="btn btn-dark" @click="editInvoiceMode=!editInvoiceMode">
 				Edit Invoice
 			</button>
@@ -327,11 +328,11 @@
                         	Back
 			</button>
                 </p>
-            </div>
-            <div v-else>
-                {{message}}
-            </div>
         </div>
+        <div v-else>
+        	{{message}}
+        </div>
+</div>
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" ></link>
     <script src="https://unpkg.com/vue@3.0.5"></script>
